--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,7 +7,11 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-  <title> {{ .Title }} &middot; {{ .Site.Title }} </title>
+  {{ if $.Scratch.Get "isHomepage" }}
+  <title>{{ .Site.Title }}</title>
+  {{ else }}
+  <title>{{ .Title }} &middot; {{ .Site.Title }}</title>
+  {{ end }}
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ .Site.BaseUrl }}/css/poole.css">
