Fix a typo in the sidebar

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -4,7 +4,7 @@
       <h1><a href="/">{{ .Site.Title }}</a></h1>
       <p class="lead">
         Welcome to the travel blog of <a href="http://h10n.me">Horst Gutmann</a>.
-        Here (try to) keep record of the things I do while traveling the world!
+        Here I (try to) keep record of the things I do while traveling the world!
       </p>
     </div>
 
