--- a/layouts/journey/single.html
+++ b/layouts/journey/single.html
@@ -1,10 +1,6 @@
 {{ partial "head.html" . }}
 {{ $slug := .Title | urlize }}
 {{ $posts := index $.Site.Taxonomies.journeys $slug }}
-<body>
-
-{{ partial "sidebar.html" . }}
-
 <div class="content container">
 <div class="post">
   <h1>{{ .Title }}</h1>
@@ -22,5 +18,5 @@
 </div>
 </div>
 
-  </body>
-</html>
+{{ partial "sidebar.html" . }}
+{{ partial "footer.html" . }}
