--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,27 +1,20 @@
 {{ $.Scratch.Add "isHomepage" true }}
 {{ partial "head.html" . }}
-<body>
-
+<div class="content container">
+    <div class="posts">
+    {{ range where .Data.Pages "Section" "post" }}
+        <div class="post">
+            <h2 class="post-title">
+            <a href="{{ .Permalink }}">
+                {{ .Title }}
+            </a>
+            </h2>
+            <span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
+            {{ .Summary }}
+            {{ if .Truncated }}<a class="more" href="{{ .Permalink }}">Continue reading "{{.Title}}"</a>{{ end }}
+        </div>
+    {{ end }}
+    </div>
+</div>
 {{ partial "sidebar.html" . }}
-
-    <div class="content container">
-<div class="posts">
-
-  {{ range where .Data.Pages "Section" "post" }}
-  <div class="post">
-    <h1 class="post-title">
-      <a href="{{ .Permalink }}">
-        {{ .Title }}
-      </a>
-    </h1>
-
-    <span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
-
-    {{ .Summary }}
-  </div>
-  {{ end }}
-</div>
-</div>
-
-  </body>
-</html>
+{{ partial "footer.html" }}
