--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,14 +13,20 @@
   <title>{{ .Title }} &middot; {{ .Site.Title }}</title>
   {{ end }}
 
-  {{ $cssManifest := getJSON "static/css/rev-manifest.json" }}
+  {{ $cssManifest := getJSON "data/rev-manifest.json" }}
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/poole.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/hyde.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface|Ubuntu">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/{{ index $cssManifest "style.css"}}">
 
   <!-- RSS -->
   <link href="/post/index.xml" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 </head>
+<body>
+<div id="page">
+    <header>
+      <h1><a href="/">{{ .Site.Title }}</a></h1>
+      <p class="lead">
+        Welcome to the travel blog of <a href="http://h10n.me">Horst Gutmann</a>.
+        Here I (try to) keep record of the things I do while traveling the world!
+      </p>
+    </header>
