--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -4,10 +4,14 @@
 <div class="post">
   <h1>{{ .Title }}</h1>
   <span class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</span>
+  {{ $journeys := $.Site.Data.journeys }}
   {{ if or .Params.journeys .Params.website }}
     <div class="data">
     {{ if .Params.journeys }}
-        <dl class="journey"><dt>Journey:</dt><dd>{{ range .Params.journeys }}<a href="/journey/{{ . | urlize }}/">{{ . }}</a>{{ end }}</dd></dl>
+    <dl class="journey"><dt>Journey:</dt><dd>{{ range .Params.journeys }}
+        {{ $journey := index $journeys . }}
+        <a href="/journey/{{ . | urlize }}/">{{ index $journey "title" }}</a>
+    {{ end }}</dd></dl>
     {{ end }}
     {{ if .Params.website }}
         <dl class="website"><dt>Website:</dt><dd><a href="{{ .Params.website }}" rel="external">{{ .Params.website }}</a></dd></dl>
