--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 {{ partial "head.html" . }}
 <div class="content container">
     <div class="posts">
-    {{ range where .Data.Pages "Section" "post" }}
+    {{ range first 5 (where .Data.Pages "Section" "post") }}
         <div class="post">
             <h2 class="post-title">
             <a href="{{ .Permalink }}">
@@ -15,6 +15,7 @@
         </div>
     {{ end }}
     </div>
+    <p class="info">For more posts please check the trips in the sidebar.</p>
 </div>
 {{ partial "sidebar.html" . }}
 {{ partial "footer.html" }}
