--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,7 +15,7 @@
 
   {{ $cssManifest := getJSON "data/rev-manifest.json" }}
   <!-- CSS -->
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface|Ubuntu">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface|Ubuntu">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/{{ index $cssManifest "style.css"}}">
 
   <!-- RSS -->
